--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
       <div class="col col-md-3">
         <h5 class="title">YEP Network</h5>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum.
+          YEP is a 501(c)(3), non-profit, non-political, and non-religious organization that provides a platform for the Ethiopian diaspora across all professions.
         </p>
       </div>
       <div class="col col-md-2">
