--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,57 +1,59 @@
 <footer id="footer">
-  <div class="footer-social-media-container">
-    <div class="container footer-social-media">
-      <div class="row py-4 d-flex align-items-center">
-        <div class="col-md-6 col-lg-5 text-left mb-4 mb-md-0">
-          <h6 class="mb-0 white-text">Get connected with us!</h6>
-        </div>
-        <div class="col-md-6 col-lg-7 text-right">
-          <a class="icons-sm fb-ic"  target="_blank" href="https://www.facebook.com/YourEthiopianProfessionals"><i class="fa fa-facebook white-text mr-lg-4"> </i></a>
-          <a class="icons-sm tw-ic"  target="_blank" href="https://twitter.com/YEPnetworks"><i class="fa fa-twitter white-text mr-lg-4"> </i></a>
-          <a class="icons-sm li-ic"  target="_blank" href="https://www.linkedin.com/company/yourethiopianprofessionals/"><i class="fa fa-linkedin white-text mr-lg-4"> </i></a>
-          <a class="icons-sm ins-ic" target="_blank" href="https://www.instagram.com/yepnetwork/"><i class="fa fa-instagram white-text mr-lg-4"> </i></a>
+  <div class="footer-wrapper">
+    <div class="footer-social-media-container">
+      <div class="container footer-social-media">
+        <div class="row py-4 d-flex align-items-center">
+          <div class="col-md-6 col-lg-5 text-left mb-4 mb-md-0">
+            <h6 class="mb-0 white-text">Get connected with us!</h6>
+          </div>
+          <div class="col-md-6 col-lg-7 text-right">
+            <a class="icons-sm fb-ic"  target="_blank" href="https://www.facebook.com/YourEthiopianProfessionals"><i class="fa fa-facebook white-text mr-lg-4"> </i></a>
+            <a class="icons-sm tw-ic"  target="_blank" href="https://twitter.com/YEPnetworks"><i class="fa fa-twitter white-text mr-lg-4"> </i></a>
+            <a class="icons-sm li-ic"  target="_blank" href="https://www.linkedin.com/company/yourethiopianprofessionals/"><i class="fa fa-linkedin white-text mr-lg-4"> </i></a>
+            <a class="icons-sm ins-ic" target="_blank" href="https://www.instagram.com/yepnetwork/"><i class="fa fa-instagram white-text mr-lg-4"> </i></a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="container footer-main-content">
-    <div class="row">
-      <div class="col col-md-3">
-        <h5 class="title">YEP Network</h5>
-        <p>
-          YEP is a 501(c)(3), non-profit, non-political, and non-religious organization that provides a platform for the Ethiopian diaspora across all professions.
-        </p>
-      </div>
-      <div class="col col-md-2">
-        <h5 class="title">About</h5>
-        <ul>
-          {% for link in site.about %}
-          <li><a href="{{ link.path }}">{{ link.title }}</a></li>
-          {% endfor %}
-        </ul>
-      </div>
-      <div class="col col-md-4">
-        <h5 class="title">Programs</h5>
-        <ul>
-          {% for program in site.programs limit:6 %}
-          <li><a href="{{ program.url | prepend: site.baseurl }}">{{ program.title }}</a></li>
-          {% endfor %}
-        </ul>
-      </div>
-      <div class="col col-md-3">
-        <h5 class="title">Contact Us</h5>
-        <ul>
-          <li>901 S Highland St.</li>
-          <li>Arlington, VA 22204</li>
-          <li>info@yepnetwork.org</li>
-        </ul>
+    <div class="container footer-main-content">
+      <div class="row">
+        <div class="col col-md-3">
+          <h5 class="title">YEP Network</h5>
+          <p>
+            YEP is a 501(c)(3), non-profit, non-political, and non-religious organization that provides a platform for the Ethiopian diaspora across all professions.
+          </p>
+        </div>
+        <div class="col col-md-2">
+          <h5 class="title">About</h5>
+          <ul>
+            {% for link in site.about %}
+            <li><a href="{{ link.path }}">{{ link.title }}</a></li>
+            {% endfor %}
+          </ul>
+        </div>
+        <div class="col col-md-4">
+          <h5 class="title">Programs</h5>
+          <ul>
+            {% for program in site.programs limit:6 %}
+            <li><a href="{{ program.url | prepend: site.baseurl }}">{{ program.title }}</a></li>
+            {% endfor %}
+          </ul>
+        </div>
+        <div class="col col-md-3">
+          <h5 class="title">Contact Us</h5>
+          <ul>
+            <li>901 S Highland St.</li>
+            <li>Arlington, VA 22204</li>
+            <li>info@yepnetwork.org</li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="footer-copyright">
-    <div class="container-fluid">
-      © 2017 Copyright: <a href="http://YEPNetwork.org"> YEPNetwork.org </a>
+    <div class="footer-copyright">
+      <div class="container-fluid">
+        © 2017 Copyright: <a href="http://YEPNetwork.org"> YEPNetwork.org </a>
+      </div>
     </div>
   </div>
 </footer>
