--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,4 +1,8 @@
 #footer {
+  .footer-wrapper {
+    background-color: #1E8BC9;
+  }
+
   padding: 0 0 23px 0;
   font-size: 12px;
   line-height: 23px;
@@ -7,8 +11,9 @@
 
   position: absolute;
   bottom: 0;
-  width: 100%;
   height: $footer-height;
+
+  width: 100%;
 
   margin-top: 45px;
   padding-top: 35px;
