--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
     <div class="container footer-main-content">
       <div class="row">
         <div class="col col-md-3">
-          <h5 class="title">YEP Network</h5>
+          <h5 class="title">Your Ethiopian Professionals Network (YEP)</h5>
           <p>
             YEP is a 501(c)(3), non-profit, non-political, and non-religious organization that provides a platform for the Ethiopian diaspora across all professions.
           </p>
