--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,9 +12,9 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="{% if page.body_class == "front" %} active {% endif %}">
+        <!-- <li class="{% if page.body_class == "front" %} active {% endif %}">
           <a href="{{ "/" | prepend: site.baseurl }}">Home</a>
-        </li>
+        -->  </li>
         <li class="dropdown {% if page.body_class == "about" %} active {% endif %}">
           <a href="{{ "/about" | prepend: site.baseurl }}">About</a>
         </li>
