--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,12 @@
       <div class="container footer-social-media">
         <div class="row py-4 d-flex align-items-center">
           <div class="col-md-6 col-lg-5 text-left mb-4 mb-md-0">
-            <h6 class="mb-0 white-text">Get connected with us!</h6>
+            <h6 class="mb-0 white-text">Connect with us on social!</h6>
           </div>
           <div class="col-md-6 col-lg-7 text-right">
+            <a class="icons-sm li-ic"  target="_blank" href="https://www.linkedin.com/company/yourethiopianprofessionals/"><i class="fa fa-linkedin white-text mr-lg-4"> </i></a>
             <a class="icons-sm fb-ic"  target="_blank" href="https://www.facebook.com/YourEthiopianProfessionals"><i class="fa fa-facebook white-text mr-lg-4"> </i></a>
             <a class="icons-sm tw-ic"  target="_blank" href="https://twitter.com/YEPnetworks"><i class="fa fa-twitter white-text mr-lg-4"> </i></a>
-            <a class="icons-sm li-ic"  target="_blank" href="https://www.linkedin.com/company/yourethiopianprofessionals/"><i class="fa fa-linkedin white-text mr-lg-4"> </i></a>
             <a class="icons-sm ins-ic" target="_blank" href="https://www.instagram.com/yepnetwork/"><i class="fa fa-instagram white-text mr-lg-4"> </i></a>
           </div>
         </div>
