--- a/_sass/_overrides.scss
+++ b/_sass/_overrides.scss
@@ -170,3 +170,23 @@ section#email-signup {
     color: #fff;
   }
 }
+
+// Update speaker page images.
+body.speakers {
+  .card-grid {
+    figure {
+      max-height: 300px;
+      min-height: 200px;
+      overflow: hidden;
+    }
+
+    .card {
+      margin-bottom: 1em;
+      p {
+        font-size: 1.5rem;
+      }
+    }
+  }
+}
+body.speakers {
+}
