--- a/_sass/_overrides.scss
+++ b/_sass/_overrides.scss
@@ -188,5 +188,10 @@ body.speakers {
     }
   }
 }
-body.speakers {
+
+p.intro {
+  font-size: 20px;
+  font-size: 2rem;
+  font-weight: 400;
+  margin-bottom: 1.5em;
 }
