--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,5 +4,18 @@ layout: default
 {% include about-nav.html %}
 
 <div class="container">
-  {{ content }}
+  <div class="row">
+    <div class="col-md-7">
+      {{ content }}
+    </div>
+    <div class="col-md-4 col-md-offset-1">
+      <div class="sidebar">
+        <div class="well invest">
+          <h2>Support Our Work</h2>
+          <p>Reallocating your resources toward Pachamama Alliance is a transformative experience that connects you with the life of the Achuar and the rainforest.</p>
+          <a href="/donate" class="btn btn-donate shout">Donate Now</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
