--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -12,7 +12,7 @@ layout: default
       <div class="sidebar">
         <div class="well invest">
           <h2>Support Our Work</h2>
-          <p>Reallocating your resources toward Pachamama Alliance is a transformative experience that connects you with the life of the Achuar and the rainforest.</p>
+          <p>Building a platform where Ethiopian Professionals could connect, learn, and share ideas is an investment in the future.</p>
           <a href="/donate" class="btn btn-donate shout">Donate Now</a>
         </div>
       </div>
