--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -10,7 +10,7 @@
         <a class="hero-cta" href="{{ hero.url }}">Read More</a>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6" style="padding: 2em">
         <a href="{{ hero.url }}"><img src="{{ hero.image }}"></a>
       </div>
     </div>
