Fixed hero cta.

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -7,7 +7,7 @@
         <div class="hero-date">{{ hero.date }}</div>
         <h2><a href="{{ hero.url }}">{{ hero.title }}</a></h2>
         <p>{{ hero.desc }}</p>
-        <a class="hero-cta" href="{{ hero.url }}">Read More</a>
+        <a class="btn btn-lg btn-default hero-cta" href="{{ hero.url }}">Read More</a>
       </div>
 
       <div class="col-md-6" style="padding: 2em">
