Removed lines between nav items.

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -21,7 +21,7 @@
 
     > li {
       text-align: center;
-      border-right: 1px solid #eee;
+      //border-right: 1px solid #eee;
       margin-bottom: 0px;
 
       &.last {
