--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,9 +24,9 @@
         <li class="dropdown {% if page.title == "Events" %} active {% endif %}">
           <a href="{{ "/events" | prepend: site.baseurl }}">Events</a>
         </li>
-        <li class="dropdown {% if page.title == "Gallery" %} active {% endif %}">
+        <!-- <li class="dropdown {% if page.title == "Gallery" %} active {% endif %}">
           <a href="{{ "/gallery" | prepend: site.baseurl }}">Gallery</a>
-        </li>
+        </li>-->
         <li class="last dropdown {% if page.title == "Diaspora Corner" %} active {% endif %}">
           <a href="{{ "/diaspora-corner" | prepend: site.baseurl }}">Diaspora Corner</a>
         </li>
