--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,6 +19,7 @@
         <li><a href="/about">About Us</a></li>
         <li><a href="/programs">Programs</a></li>
         <li><a href="/events">Events</a></li>
+        <li><a href="/donate">Support YEP</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-left">
         <li class="hidden">
