--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,9 @@
         </li>-->
         <li class="last dropdown {% if page.title == "Diaspora Corner" %} active {% endif %}">
           <a href="{{ "/diaspora-corner" | prepend: site.baseurl }}">Diaspora Corner</a>
+          <li class="dropdown {% if page.title == "Gallery" %} active {% endif %}">
+          <a href="{{ "/donate" | prepend: site.baseurl }}">Support YEP</a>
+        </li>
         </li>
       </ul>
     </div>
