--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -1,13 +1,8 @@
 ---
 layout: default
 ---
-<div class="container pad-by-50">
-  <div class="row">
-    <div class="col-sm-12">
-      <h2 class="margin-top-0 margin-bottom-0">{{ page.title }}</h2>
-    </div>
+<div class="content">
+  <div class="container">
+    {{ content }}
   </div>
-</div>
-<div class="container">
-  {{ content }}
 </div>
