Updated programs sub-nav.

--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+{% include programs-nav.html %}
+
 <div class="content">
   <div class="container">
     <div class="row">
