--- a/_includes/programs-nav.html
+++ b/_includes/programs-nav.html
@@ -3,7 +3,7 @@
     <div class="wrap">
       <div id="subnav" role="navigation">
         <ul id="menu-primary-menu-v2-1" class="nav navbar-nav">
-          {% for link in site.about %}
+          {% for link in site.program %}
           <li class="{{ link.class }}">
             <a title="{{ link.title }}" href="{{ link.path }}">{{ link.title }}</a>
           </li>
