--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
         <li class="dropdown {% if page.body_class == "about" %} active {% endif %}">
           <a href="{{ "/about" | prepend: site.baseurl }}">About</a>
         </li>
-        <li class="dropdown {% if page.title == "Programs" %} active {% endif %}">
+        <li class="dropdown {% if page.body_class == "program" %} active {% endif %}">
           <a href="{{ "/programs" | prepend: site.baseurl }}">Programs</a>
         </li>
         <li class="dropdown {% if page.title == "Events" %} active {% endif %}">
