Fixed spacing issues in title regions.

--- a/_includes/about-nav.html
+++ b/_includes/about-nav.html
@@ -1,4 +1,4 @@
-<div id="subnav-holder" class="hidden-xs" role="navigation" style="margin-bottom: 60px;">
+<div id="subnav-holder" class="hidden-xs" role="navigation">
   <div class="container">
     <div class="wrap">
       <div id="subnav" role="navigation">
