--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,7 +8,7 @@ layout: default
     <div class="col-md-7">
       {{ content }}
     </div>
-    <div class="col-md-4 col-md-offset-1">
+    <div class="col-md-4 col-md-offset-1 margin-top-1">
       <div class="sidebar">
         <div class="well invest">
           <h2>Support Our Work</h2>
