--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -3,15 +3,13 @@ layout: default
 ---
 {% include programs-nav.html %}
 
-<div class="content">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <h1 class="margin-top-0">{{ page.title }}</h1>
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1 class="page-title">{{ page.title }}</h1>
     </div>
   </div>
-  <div class="container">
-    {{ content }}
-  </div>
+</div>
+<div class="container">
+  {{ content }}
 </div>
