--- a/_sass/_overrides.scss
+++ b/_sass/_overrides.scss
@@ -147,12 +147,6 @@ body {
   border-radius: 50%;
 }
 
-body.about {
-  .panel {
-    //min-height: 380px;
-  }
-}
-
 .events-panel {
   min-height: 380px;
   margin-bottom: 2em;
@@ -196,14 +190,6 @@ p.intro {
   margin-bottom: 1.5em;
 }
 
-// Remove top margin from page headers in about section.
-body.about {
-  h1 {
-    margin-top: 0;
-  }
-}
-body.team {
-  h1 {
-    margin-top: 0;
-  }
+h1.page-title {
+  margin: 1.0em 0 .75em 0;
 }
