Fixed donate nav item active class.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,9 +21,10 @@
         <li class="dropdown {% if page.title == "Events" %} active {% endif %}">
           <a href="{{ "/events" | prepend: site.baseurl }}">Events</a>
         </li>
-        <li class="last dropdown {% if page.title == "Diaspora Corner" %} active {% endif %}">
+        <li class="dropdown {% if page.title == "Diaspora Corner" %} active {% endif %}">
           <a href="{{ "/diaspora-corner" | prepend: site.baseurl }}">Diaspora Corner</a>
-          <li class="dropdown {% if page.title == "Gallery" %} active {% endif %}">
+        </li>
+        <li class="last dropdown {% if page.body_class == "donate" %} active {% endif %}">
           <a href="{{ "/donate" | prepend: site.baseurl }}">Support YEP</a>
         </li>
         </li>
