--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="dropdown {% if page.body_class == "about" %} active {% endif %}">
+        <li class="dropdown {% if page.body_class == "about" or page.body_class == "team" %} active {% endif %}">
           <a href="{{ "/about" | prepend: site.baseurl }}">About</a>
         </li>
         <li class="dropdown {% if page.body_class == "program" %} active {% endif %}">
