Fixed padding around hero image.

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -10,7 +10,7 @@
         <a class="btn btn-lg btn-default hero-cta" href="{{ hero.url }}">Read More</a>
       </div>
 
-      <div class="col-md-6" style="padding: 2em">
+      <div class="col-md-6" style="padding: 2em 0.25em">
         <a href="{{ hero.url }}"><img src="{{ hero.image }}"></a>
       </div>
     </div>
