Fixed page title size in small screens.

--- a/_sass/_overrides.scss
+++ b/_sass/_overrides.scss
@@ -193,3 +193,10 @@ p.intro {
 h1.page-title {
   margin: 1.0em 0 .75em 0;
 }
+
+@media (max-width: 321px) {
+  h1.page-title {
+    // Page titles look too big in iPhone 5 (320x568).
+    font-size: 2.6rem;
+  }
+}
