--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,7 @@
         <li><a href="/programs">Programs</a></li>
         <li><a href="/events">Events</a></li>
         <li><a href="/donate">Support YEP</a></li>
-        <li><a href="/donate">Join</a></li>
+        <li><a href="/join">Join</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-left">
         <li class="hidden">
